# smplinfo

./: Cargo.toml  README.md  smplinfo.manifest
.github/workflows/: ci.yml
gui/: Cargo.toml  build.rs  smplinfo.rc
gui/src/: directory_picker.rs  futures.rs  logger.rs  main.rs
gui/src/widgets/: mod.rs  tree.rs
gui/src/workspace/: directories.rs  mod.rs
lib/: Cargo.toml
lib/src/: sample.rs  wav.rs
src/: cli.rs  format.rs  lib.rs  main.rs  midi.rs  sample.rs  wav.rs  workspace.rs
src/ui/: about_dialog.rs  log_console.rs  mod.rs  table.rs  tasks.rs
src/ui/widgets/: table.rs  tree.rs
src/workspace/: directories.rs  mod.rs
